Working on cable list tool

--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClLinkedUnitConnectorInfoDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClLinkedUnitConnectorInfoDialog.ui
@@ -7,54 +7,108 @@
     <x>0</x>
     <y>0</y>
     <width>821</width>
-    <height>421</height>
+    <height>365</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Linked connectors</string>
   </property>
-  <widget class="QDialogButtonBox" name="buttonBox">
-   <property name="geometry">
-    <rect>
-     <x>450</x>
-     <y>370</y>
-     <width>341</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Close</set>
-   </property>
-  </widget>
-  <widget class="QGroupBox" name="gbConnector">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>40</y>
-     <width>471</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>Connector</string>
-   </property>
-  </widget>
-  <widget class="QGroupBox" name="gbLinkedConnectors">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>140</y>
-     <width>681</width>
-     <height>191</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>Linked connector</string>
-   </property>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QGroupBox" name="gbConnector">
+       <property name="title">
+        <string>Connector</string>
+       </property>
+       <layout class="QFormLayout" name="formLayout_2">
+        <item row="0" column="0">
+         <widget class="QLabel" name="lbUnitConnectorNameLabel">
+          <property name="text">
+           <string>Connector name:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLabel" name="lbUnitConnectorName">
+          <property name="text">
+           <string>Unit connector name</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QGroupBox" name="gbUnit">
+       <property name="title">
+        <string>Unit</string>
+       </property>
+       <layout class="QFormLayout" name="formLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="lbSchemaPositionLabel">
+          <property name="text">
+           <string>Schema position:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLabel" name="lbSchemaPosition">
+          <property name="text">
+           <string>Schema position</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="lbAliasLabel">
+          <property name="text">
+           <string>Alias:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="lbAlias">
+          <property name="text">
+           <string>Alias</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="gbLinkedConnectors">
+     <property name="title">
+      <string>Linked connectors</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Close</set>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections>
