--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClLinkedUnitConnectorInfoDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClLinkedUnitConnectorInfoDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>821</width>
-    <height>365</height>
+    <width>968</width>
+    <height>476</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,6 +24,13 @@
        <layout class="QFormLayout" name="formLayout_2">
         <item row="0" column="0">
          <widget class="QLabel" name="lbUnitConnectorNameLabel">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
           <property name="text">
            <string>Connector name:</string>
           </property>
@@ -31,6 +38,11 @@
         </item>
         <item row="0" column="1">
          <widget class="QLabel" name="lbUnitConnectorName">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Unit connector name</string>
           </property>
@@ -47,6 +59,13 @@
        <layout class="QFormLayout" name="formLayout">
         <item row="0" column="0">
          <widget class="QLabel" name="lbSchemaPositionLabel">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
           <property name="text">
            <string>Schema position:</string>
           </property>
@@ -54,6 +73,11 @@
         </item>
         <item row="0" column="1">
          <widget class="QLabel" name="lbSchemaPosition">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Schema position</string>
           </property>
@@ -61,6 +85,13 @@
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="lbAliasLabel">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
           <property name="text">
            <string>Alias:</string>
           </property>
@@ -68,6 +99,11 @@
         </item>
         <item row="1" column="1">
          <widget class="QLabel" name="lbAlias">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Alias</string>
           </property>
