--- a/tools/mdtcablelist/src/mdtClMainWindow.ui
+++ b/tools/mdtcablelist/src/mdtClMainWindow.ui
@@ -6,63 +6,63 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>479</width>
-    <height>297</height>
+    <width>591</width>
+    <height>377</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Cable list tool</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pbEditUnit">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>40</y>
-      <width>85</width>
-      <height>26</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Edit units</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pbEditArticle">
-    <property name="geometry">
-     <rect>
-      <x>150</x>
-      <y>40</y>
-      <width>100</width>
-      <height>26</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Edit articles</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pbEditVehicleType">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>40</y>
-      <width>137</width>
-      <height>26</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Edit vehicle types</string>
-    </property>
-    <property name="flat">
-     <bool>false</bool>
-    </property>
-   </widget>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QPushButton" name="pbEditVehicleType">
+      <property name="text">
+       <string>Edit vehicle types</string>
+      </property>
+      <property name="flat">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QPushButton" name="pbEditArticle">
+      <property name="text">
+       <string>Edit articles</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <widget class="QPushButton" name="pbEditUnit">
+      <property name="text">
+       <string>Edit units</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" colspan="3">
+     <widget class="QTextEdit" name="textEdit">
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+      <property name="html">
+       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; color:#0000ff;&quot;&gt;Cable list tool&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Provide a vay to create and edit cable list....&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>479</width>
+     <width>591</width>
      <height>21</height>
     </rect>
    </property>
@@ -81,11 +81,9 @@
     <property name="title">
      <string>&amp;Edition</string>
     </property>
-    <addaction name="actEditVehicleType"/>
     <addaction name="separator"/>
     <addaction name="actEditConnector"/>
     <addaction name="separator"/>
-    <addaction name="actEditArticle"/>
     <addaction name="separator"/>
     <addaction name="actEditUnit"/>
     <addaction name="separator"/>
@@ -101,8 +99,26 @@
     <addaction name="actEditTestConnectionCable"/>
     <addaction name="actCableChecker"/>
    </widget>
+   <widget class="QMenu" name="menuVehicle_types">
+    <property name="title">
+     <string>&amp;Vehicle types</string>
+    </property>
+    <addaction name="actViewVehicleType"/>
+    <addaction name="actEditSelectedVehicleType"/>
+    <addaction name="actEditVehicleType"/>
+   </widget>
+   <widget class="QMenu" name="menu_Articles">
+    <property name="title">
+     <string>&amp;Articles</string>
+    </property>
+    <addaction name="actViewArticle"/>
+    <addaction name="actEditSelectedArticle"/>
+    <addaction name="actEditArticle"/>
+   </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Edition"/>
+   <addaction name="menuVehicle_types"/>
+   <addaction name="menu_Articles"/>
    <addaction name="menuTest"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -120,7 +136,9 @@
   </widget>
   <action name="actOpenDatabase">
    <property name="icon">
-    <iconset theme="document-open"/>
+    <iconset theme="document-open">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>&amp;Open a database</string>
@@ -128,7 +146,9 @@
   </action>
   <action name="actCreateNewDatabase">
    <property name="icon">
-    <iconset theme="document-new"/>
+    <iconset theme="document-new">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Create a &amp;new database</string>
@@ -141,7 +161,9 @@
   </action>
   <action name="ActQuit">
    <property name="icon">
-    <iconset theme="application-exit"/>
+    <iconset theme="application-exit">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>&amp;Quit</string>
@@ -154,12 +176,7 @@
   </action>
   <action name="actEditVehicleType">
    <property name="text">
-    <string>Edit &amp;vehicle types</string>
-   </property>
-  </action>
-  <action name="actEditArticle">
-   <property name="text">
-    <string>Edit &amp;articles</string>
+    <string>Edit (all)</string>
    </property>
   </action>
   <action name="actEditUnit">
@@ -215,6 +232,36 @@
   <action name="actEditLinkBeam">
    <property name="text">
     <string>Edit link &amp;beams</string>
+   </property>
+  </action>
+  <action name="actViewVehicleType">
+   <property name="text">
+    <string>View</string>
+   </property>
+  </action>
+  <action name="actionEdit_all">
+   <property name="text">
+    <string>Edit (all)</string>
+   </property>
+  </action>
+  <action name="actEditSelectedVehicleType">
+   <property name="text">
+    <string>Edit selected</string>
+   </property>
+  </action>
+  <action name="actViewArticle">
+   <property name="text">
+    <string>&amp;View</string>
+   </property>
+  </action>
+  <action name="actEditSelectedArticle">
+   <property name="text">
+    <string>&amp;Edit selected</string>
+   </property>
+  </action>
+  <action name="actEditArticle">
+   <property name="text">
+    <string>Edit (all)</string>
    </property>
   </action>
  </widget>
