--- a/src/mdttools/mdttesttool/mdtTtTestNodeUnitDialog.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestNodeUnitDialog.ui
@@ -64,7 +64,17 @@
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QSpinBox" name="sbIoPosition"/>
+    <widget class="QSpinBox" name="sbIoPosition">
+     <property name="specialValueText">
+      <string>Null</string>
+     </property>
+     <property name="minimum">
+      <number>-1</number>
+     </property>
+     <property name="maximum">
+      <number>300</number>
+     </property>
+    </widget>
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="lbType">
