--- a/src/mdttools/mdttesttool/mdtTtTestModelItemEditor.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestModelItemEditor.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>342</width>
-    <height>62</height>
+    <height>162</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,15 +24,35 @@
    <item row="0" column="1">
     <widget class="QLineEdit" name="fld_SequenceNumber"/>
    </item>
-   <item row="1" column="0">
+   <item row="3" column="0">
     <widget class="QLabel" name="lbExpectedValue">
      <property name="text">
       <string>Expected value:</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="3" column="1">
     <widget class="QLineEdit" name="fld_ExpectedValue"/>
+   </item>
+   <item row="2" column="1">
+    <widget class="QLineEdit" name="fld_DesignationEN"/>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="lbDesignationEN">
+     <property name="text">
+      <string>Designation (English):</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QLineEdit" name="fld_ValueUnit"/>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="lbValueUnit">
+     <property name="text">
+      <string>Unit:</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
