--- a/src/mdttools/mdttesttool/mdtTtTestNodeUnitSetupDialog.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestNodeUnitSetupDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>228</width>
-    <height>94</height>
+    <width>425</width>
+    <height>207</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -41,13 +41,23 @@
    <item row="1" column="1">
     <widget class="QDoubleSpinBox" name="sbValue"/>
    </item>
-   <item row="2" column="0" colspan="2">
+   <item row="3" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QPlainTextEdit" name="teCommand"/>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="lbCommand">
+     <property name="text">
+      <string>Command:</string>
      </property>
     </widget>
    </item>
