--- a/src/mdttools/mdttesttool/mdtTtTestNodeEditor.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestNodeEditor.ui
@@ -76,14 +76,14 @@
       </widget>
      </item>
      <item row="3" column="0">
-      <widget class="QLabel" name="lb_nodeId">
+      <widget class="QLabel" name="lb_nodeIdentification">
        <property name="text">
-        <string>Node ID:</string>
+        <string>Node identification:</string>
        </property>
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QLineEdit" name="fld_NodeId"/>
+      <widget class="QLineEdit" name="fld_NodeIdentification"/>
      </item>
     </layout>
    </item>
