--- a/src/mdttools/mdttesttool/mdtTtTestNodeUnitSetupDialog.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestNodeUnitSetupDialog.ui
@@ -39,7 +39,14 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QDoubleSpinBox" name="sbValue"/>
+    <widget class="QDoubleSpinBox" name="sbValue">
+     <property name="specialValueText">
+      <string>Null</string>
+     </property>
+     <property name="minimum">
+      <double>-11.000000000000000</double>
+     </property>
+    </widget>
    </item>
    <item row="3" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
