--- a/src/mdttools/mdttesttool/mdtTtTestNodeEditor.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestNodeEditor.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>421</width>
+    <width>434</width>
     <height>125</height>
    </rect>
   </property>
@@ -84,6 +84,16 @@
      </item>
      <item row="3" column="1">
       <widget class="QLineEdit" name="fld_NodeIdentification"/>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="fld_DeviceIdentification"/>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="lbDeviceIdentification">
+       <property name="text">
+        <string>Device identification:</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
