--- a/src/mdttools/mdttesttool/mdtTtTestNodeUnitSetupDialog.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestNodeUnitSetupDialog.ui
@@ -14,14 +14,17 @@
    <string>Dialog</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
-   <item row="0" column="0">
+   <property name="fieldGrowthPolicy">
+    <enum>QFormLayout::ExpandingFieldsGrow</enum>
+   </property>
+   <item row="1" column="0">
     <widget class="QLabel" name="lbState">
      <property name="text">
       <string>State:</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
+   <item row="1" column="1">
     <widget class="QCheckBox" name="cbState">
      <property name="text">
       <string/>
@@ -31,14 +34,14 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="2" column="0">
     <widget class="QLabel" name="lbValue">
      <property name="text">
       <string>Value:</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="1">
     <widget class="QDoubleSpinBox" name="sbValue">
      <property name="specialValueText">
       <string>Null</string>
@@ -48,7 +51,17 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2">
+   <item row="3" column="0">
+    <widget class="QLabel" name="lbCommand">
+     <property name="text">
+      <string>Command:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QPlainTextEdit" name="teCommand"/>
+   </item>
+   <item row="4" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -58,13 +71,13 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QPlainTextEdit" name="teCommand"/>
+   <item row="0" column="1">
+    <widget class="QSpinBox" name="sbStepNumber"/>
    </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="lbCommand">
+   <item row="0" column="0">
+    <widget class="QLabel" name="lbStepNumber">
      <property name="text">
-      <string>Command:</string>
+      <string>Step #:</string>
      </property>
     </widget>
    </item>
