--- a/src/mdttools/mdttesttool/mdtTtTestModelItemEditor.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestModelItemEditor.ui
@@ -54,6 +54,13 @@
      </property>
     </widget>
    </item>
+   <item row="5" column="1">
+    <widget class="QDoubleSpinBox" name="doubleSpinBox">
+     <property name="maximum">
+      <double>999999.000000000000000</double>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
