--- a/src/mdttools/mdttesttool/mdtTtTestConnectionCableEditor.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestConnectionCableEditor.ui
@@ -6,23 +6,68 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>391</width>
-    <height>33</height>
+    <width>662</width>
+    <height>86</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QFormLayout" name="formLayout">
-   <item row="0" column="0">
-    <widget class="QLabel" name="lbIdentification">
-     <property name="text">
-      <string>Identification:</string>
-     </property>
-    </widget>
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
+    <layout class="QFormLayout" name="formLayout">
+     <item row="0" column="0">
+      <widget class="QLabel" name="lbIdentification">
+       <property name="text">
+        <string>Identification:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="fld_Identification"/>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLabel" name="fld_OffsetResetDate">
+       <property name="text">
+        <string>                        </string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="lbOffsetResetDate">
+       <property name="text">
+        <string>Last offset reset:</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="fld_Identification"/>
+   <item>
+    <layout class="QFormLayout" name="formLayout_2">
+     <item row="0" column="0">
+      <widget class="QLabel" name="lbDescriptionEN">
+       <property name="text">
+        <string>Description:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPlainTextEdit" name="fld_DescriptionEN">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>80</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
