--- a/src/mdttools/mdttesttool/mdtTtBasicTesterWindow.ui
+++ b/src/mdttools/mdttesttool/mdtTtBasicTesterWindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mdtTtBasicTester</class>
- <widget class="QMainWindow" name="mdtTtBasicTester">
+ <class>mdtTtBasicTesterWindow</class>
+ <widget class="QMainWindow" name="mdtTtBasicTesterWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
