Working on test tool

--- a/src/mdttools/mdttesttool/mdtTtBasicTesterWindow.ui
+++ b/src/mdttools/mdttesttool/mdtTtBasicTesterWindow.ui
@@ -62,7 +62,7 @@
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QLineEdit" name="leSN">
+          <widget class="QLineEdit" name="fld_DutSerialNumber">
            <property name="minimumSize">
             <size>
              <width>200</width>
