--- a/src/mdttools/mdttesttool/mdtTtBasicTesterWindow.ui
+++ b/src/mdttools/mdttesttool/mdtTtBasicTesterWindow.ui
@@ -34,7 +34,7 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QLabel" name="lbDate">
+          <widget class="QLabel" name="fld_Date">
            <property name="text">
             <string>date</string>
            </property>
@@ -54,14 +54,14 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
+         <item row="3" column="0">
           <widget class="QLabel" name="lbSN">
            <property name="text">
             <string>SN:</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
+         <item row="3" column="1">
           <widget class="QLineEdit" name="fld_DutSerialNumber">
            <property name="minimumSize">
             <size>
@@ -74,6 +74,16 @@
              <width>300</width>
              <height>16777215</height>
             </size>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLineEdit" name="fld_DutName"/>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="lbDutName">
+           <property name="text">
+            <string>DUT name:</string>
            </property>
           </widget>
          </item>
@@ -249,7 +259,7 @@
     </iconset>
    </property>
    <property name="text">
-    <string>&amp;View a test</string>
+    <string>&amp;Select a test</string>
    </property>
    <property name="toolTip">
     <string>View allready executed test</string>
